# wiringPi

./: .gitignore  Makefile.am  README.md  conf-email  configure.ac  create_debian  create_rpm  default.configure  libwiringPi.pc.in  libwiringPiDev.pc.in  version.h.in  wiringPi.spec.in  wiringpi.spec.in
.github/workflows/: wiringpi-c-cpp.yml
debian/: .gitignore  Makefile  WiringPi.install  changelog  control  control.in  copyright.in  libwiringPi.install  libwiringpi-dev.install  libwiringpidev-dev.install  libwiringpidev.install  postinst  rules  wiringpi.dsc.in
devLib/: Makefile  Makefile.am  lcd.c  lcd.h
doc/: ChangeLog
gpio/: Makefile  Makefile.am  gpio.c
pins/: Makefile
wiringPi/: Makefile  Makefile.am  ads1115.c  ads1115.h  mcp3422.c  pcf8591.c  pseudoPins.c  wiringPi.c  wiringPi.h  wiringSerial.c
